# fluidspaces-rs

./: Cargo.toml  PKGBUILD  README.rst  fluidspaces.service
src/: lib.rs  parser.rs
