[package]
name = "fluidspaces"
version = "0.5.1"
authors = ["Peter Henry <me@peterhenry.net>"]
license = "Apache-2.0 OR MIT"

# [[bin]]
# name = "fluidspaces"
# doc = false

[dependencies]
clap = "2.29.0"
unicode-segmentation = "1.2.0"
# nom = "3.2.1"
nom = "4.1.1"
failure = "0.1.1"

[dependencies.i3ipc]
version = "0.8.2"
features = ["i3-4-14"]
